# AxioTome

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup.sh  vite.config.ts
src/: AIAssistant.tsx  App.tsx  Library.tsx  PDFViewer.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai_engine.rs  commands.rs  database.rs  main.rs
