[package]
name = "axiotome"
version = "0.1.0"
description = "AI搭載技術書PDFライブラリ・読書支援デスクトップアプリケーション"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["shell-open"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.1", features = ["bundled"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
