[package]
name = "axiotome"
version = "0.1.0"
description = "AI搭載技術書PDFライブラリ・読書支援デスクトップアプリケーション"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
duckdb = { version = "1.1", features = ["bundled"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
# pdf-extract = "0.7"  # 一旦コメントアウト
# tauri-plugin-dialog = "2.0"  # GTK依存のため一旦コメントアウト
# Candle関連は今後段階的に追加
# candle-core = "0.8"
# candle-nn = "0.8"
# candle-transformers = "0.8"
# hf-hub = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
